@@ -28,6 +28,7 @@ CAY-2197 Update sqlite version and enable in-memory default config
 
 Bug Fixes:
 
+CAY-2137 When generating SQL from EJBQL, use "AND" to separate multiple join conditions
 CAY-2174 Change FK attribute name cause ObjAttribute appear after Reverse Engineering
 CAY-2175 AliasName used in EJBQLQuery is not working if it contains mixed case
 
